# paper-pipeline

./: .gitignore  docker-compose.yml  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
skills/paper-pipeline/: SKILL.md
src/paper_pipeline/: __init__.py  __main__.py  bibtex.py  cli.py  discovery.py  extractor.py  fetcher.py  pool.py  store.py  utils.py
tests/: test_bibtex.py  test_cli.py  test_e2e.py  test_expand_citations.py  test_extractor.py  test_fetcher.py  test_pool.py  test_provenance.py  test_public_api.py  test_utils.py
